--- a/css/styles.css
+++ b/css/styles.css
@@ -45,13 +45,13 @@ img {
     display: block;
 }
 
-.top-section {
+.header-section {
     border-bottom: 1px solid #EEEEEE;
     height: 80px;
     display: flex;
 }
 
-.nav-logo {
+.navbar-logo {
     font-family: Raleway;
     font-weight: 700;
     font-size: 26px;
@@ -61,11 +61,11 @@ img {
     margin-right: 93px;
 }
 
-.nav-logo-colored {
+.navbar-logo-colored {
     color: var(--accent-color);
 }
 
-.nav-logo-light {
+.nav-logo-footer {
     font-family: Raleway;
     font-weight: 700;
     font-size: 26px;
@@ -79,15 +79,15 @@ img {
     align-items: center;
 }
 
-.nav-list:not(:last-child) {
-    margin-right: 50px;
-}
-
-.navbar-item {
+.navbar-list {
     display: flex;
 }
 
-.nav-link {
+.navbar-item:not(:last-child) {
+    margin-right: 50px;
+}
+
+.navbar-link {
     font-weight: 500;
     letter-spacing: 0.02em;
     color: var(--second-color);
@@ -97,7 +97,7 @@ img {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link.current::after {
+.navbar-link.current::after {
     content: "";
     width: 100%;
     height: 4px;
@@ -109,8 +109,8 @@ img {
     left: 0;
 }
 
-.nav-link:hover,
-.nav-link:focus {
+.navbar-link:hover,
+.navbar-link:focus {
     color: var(--accent-color);
 }
 
@@ -150,13 +150,14 @@ img {
     margin-top: 20px;
 }
 
-.contact-link-light {
+.contact-link-footer {
     font-weight: 500;
     color: rgb(255, 255, 255, 0.6);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-link-light:focus,
-.contact-link-light:hover {
+.contact-link-footer:focus,
+.contact-link-footer:hover {
     color: var(--accent-color);
 }
 
@@ -181,7 +182,7 @@ img {
     margin-bottom: 30px;
 }
 
-.btn-primary {
+.hero-button {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
@@ -202,7 +203,7 @@ img {
     border-radius: 4px;
 }
 
-.btn-primary {
+.hero-button {
     background-color: var(--accent-color);
 }
 
@@ -228,7 +229,7 @@ img {
     color: var(--primari-text-color);
 }
 
-.subtitel-big {
+.subtitel {
     font-size: 36px;
     font-weight: 700;
     line-height: 1.18;
@@ -304,7 +305,7 @@ img {
     color: var(--second-color);
 }
 
-.ftr-button {
+.filter-button {
     font-weight: 500;
     text-decoration: none;
     cursor: pointer;
@@ -319,8 +320,8 @@ img {
     margin-right: 8px;
 }
 
-.ftr-button:hover,
-.ftr-button:focus {
+.filter-button:hover,
+.filter-button:focus {
     background-color: var(--accent-color);
     color: var(--whitw-color-texte);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -371,7 +372,7 @@ img {
     line-height: 1.9;
 }
 
-.portfolio-text-planting {
+.portfolio-text-box {
     border-bottom: 1px solid #EEEEEE;
     border-left: 1px solid #EEEEEE;
     border-right: 1px solid #EEEEEE;
@@ -382,7 +383,7 @@ img {
     color: var(--second-color);
 }
 
-.address-light {
+.address-footer {
     line-height: 1.7;
     color: var(--whitw-color-texte);
     padding-bottom: 9px;
@@ -394,7 +395,7 @@ img {
     color: rgb(255, 255, 255, 0.6);
 }
 
-.contact-margin {
+.contat-item-footer:not(:last-child) {
     margin-bottom: 6px;
 }
 
@@ -434,7 +435,7 @@ img {
     padding-top: 0px;
 }
 
-.footer-custom {
+.footer {
     background-color: #2F303A;
     padding: 60px 0;
     display: flex;
@@ -721,7 +722,7 @@ img {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-modal {
+.button-modal {
     position: absolute;
     top: 8px;
     right: 8px;
@@ -804,7 +805,7 @@ img {
     cursor: pointer;
 }
 
-.btn-icon {
+.button-icon {
     margin-left: 10px;
     fill: #FFFFFf;
 }
@@ -934,7 +935,7 @@ img {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-submit {
+.button-submit {
     display: inline-flex;
     align-items: center;
     justify-content: center;
