--- a/css/styles.css
+++ b/css/styles.css
@@ -45,13 +45,13 @@ img {
     display: block;
 }
 
-.header-section {
+.header__section {
     border-bottom: 1px solid #EEEEEE;
     height: 80px;
     display: flex;
 }
 
-.navbar-logo {
+.navbar__logo {
     font-family: Raleway;
     font-weight: 700;
     font-size: 26px;
@@ -61,11 +61,11 @@ img {
     margin-right: 93px;
 }
 
-.navbar-logo-colored {
+.navbar__logo--colored {
     color: var(--accent-color);
 }
 
-.nav-logo-footer {
+.nav__logo--footer {
     font-family: Raleway;
     font-weight: 700;
     font-size: 26px;
@@ -79,15 +79,15 @@ img {
     align-items: center;
 }
 
-.navbar-list {
+.navbar__list {
     display: flex;
 }
 
-.navbar-item:not(:last-child) {
+.navbar__item:not(:last-child) {
     margin-right: 50px;
 }
 
-.navbar-link {
+.navbar__link {
     font-weight: 500;
     letter-spacing: 0.02em;
     color: var(--second-color);
@@ -97,7 +97,7 @@ img {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.navbar-link.current::after {
+.navbar__link.navbar__link--current::after {
     content: "";
     width: 100%;
     height: 4px;
@@ -109,12 +109,12 @@ img {
     left: 0;
 }
 
-.navbar-link:hover,
-.navbar-link:focus {
+.navbar__link:hover,
+.navbar__link:focus {
     color: var(--accent-color);
 }
 
-.current {
+.navbar__link--current {
     color: var(--accent-color)
 }
 
@@ -124,11 +124,11 @@ img {
     align-items: center;
 }
 
-.contacts-list:not(:last-child) {
+.contacts__list:not(:last-child) {
     margin-right: 50px;
 }
 
-.contact-link {
+.contact__link {
     color: var(--primari-text-color);
     font-weight: 500;
     display: block;
@@ -136,32 +136,32 @@ img {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-link:hover,
-.contact-link:focus {
+.contact__link:hover,
+.contact__link:focus {
     color: var(--accent-color);
 }
 
-.contact-link:hover .contact-svg-mail,
-.contact-link:focus .contact-svg-mail {
+.contact__link:hover .contact__svg--mail,
+.contact__link:focus .contact__svg--mail {
     fill: var(--accent-color);
 }
 
-.footer-list {
+.footer__list {
     margin-top: 20px;
 }
 
-.contact-link-footer {
+.contact__link--footer {
     font-weight: 500;
     color: rgb(255, 255, 255, 0.6);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-link-footer:focus,
-.contact-link-footer:hover {
+.contact__link--footer:focus,
+.contact__link--footer:hover {
     color: var(--accent-color);
 }
 
-.hero-section {
+.hero__section {
     padding: 200px 0;
     background-color: #2F303A;
     background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../image/bgimg.jpg);
@@ -169,7 +169,7 @@ img {
     background-position: center;
 }
 
-.titel-text {
+.titel__text {
     font-size: 44px;
     letter-spacing: 0.06em;
     font-weight: 900;
@@ -182,7 +182,7 @@ img {
     margin-bottom: 30px;
 }
 
-.hero-button {
+.hero__button {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
@@ -203,7 +203,7 @@ img {
     border-radius: 4px;
 }
 
-.hero-button {
+.hero__button {
     background-color: var(--accent-color);
 }
 
@@ -211,11 +211,11 @@ img {
     display: flex;
 }
 
-.features-list:not(:last-child) {
+.features__list:not(:last-child) {
     margin-right: 30px;
 }
 
-.features-title {
+.features__title {
     font-size: 14px;
     font-weight: 700;
     color: var(--second-color);
@@ -223,7 +223,7 @@ img {
     margin-bottom: 10px;
 }
 
-.features-text {
+.features__text {
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--primari-text-color);
@@ -238,37 +238,37 @@ img {
     margin-bottom: 50px;
 }
 
-.work-specifications-list {
+.work__specifications--list {
     display: flex;
 }
 
-.work-specifications-item {
+.work__specifications--item {
     position: relative;
 }
 
-.work-specifications-item:not(:last-child) {
+.work__specifications--item:not(:last-child) {
     margin-right: 30px;
 }
 
-.team-bg {
+.team__bg {
     background-color: #F5F4FA;
 }
 
-.team-gallery {
+.team__gallery {
     display: flex;
 }
 
-.team-gallery-item {
+.team__gallery--item {
     border: 1px solid #EEEEEE;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
 
-.team-gallery-item:not(:last-child) {
+.team__gallery--item:not(:last-child) {
     margin-right: 30px;
 }
 
-.team-gallery-member {
+.team__gallery--member {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.2;
@@ -276,7 +276,7 @@ img {
     margin-bottom: 10px;
 }
 
-.team-gallery-text {
+.team__gallery--text {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.19;
@@ -284,13 +284,13 @@ img {
     margin-bottom: 16px;
 }
 
-.border-name {
+.border__name {
     text-align: center;
     padding: 30px 0;
     background-color: #FFFFFF;
 }
 
-.porfolio-title {
+.porfolio__title {
     position: absolute;
     clip: rect(0 0 0 0);
     width: 1px;
@@ -298,14 +298,14 @@ img {
     margin: -1px;
 }
 
-.filter-item {
+.filter__item {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.6;
     color: var(--second-color);
 }
 
-.filter-button {
+.filter__button {
     font-weight: 500;
     text-decoration: none;
     cursor: pointer;
@@ -316,47 +316,47 @@ img {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filter-item:not(:last-child) {
+.filter__item:not(:last-child) {
     margin-right: 8px;
 }
 
-.filter-button:hover,
-.filter-button:focus {
+.filter__button:hover,
+.filter__button:focus {
     background-color: var(--accent-color);
     color: var(--whitw-color-texte);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.portfolio-list {
+.portfolio__list {
     display: flex;
     flex-wrap: wrap;
     margin: -15px;
 }
 
-.portfolio-link:focus,
-.portfolio-link:hover {
+.portfolio__link:focus,
+.portfolio__link:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.gallery-img:focus .portfolio-link,
-.gallery-img:hover .portfolio-link {
+.gallery__img:focus .portfolio__link,
+.gallery__img:hover .portfolio__link {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.gallery-img {
+.gallery__img {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item {
+.portfolio__item {
     margin: 15px;
 }
 
-.porfolio-link {
+.porfolio__link {
     display: block;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.subtitle-portfolio {
+.subtitle__portfolio {
     font-size: 18px;
     font-weight: 700;
     line-height: 2;
@@ -365,14 +365,14 @@ img {
     margin-bottom: 4px;
 }
 
-.portfolio-text {
+.portfolio__text {
     color: var(--primari-text-color);
     text-decoration: none;
     font-size: 16px;
     line-height: 1.9;
 }
 
-.portfolio-text-box {
+.portfolio__text--box {
     border-bottom: 1px solid #EEEEEE;
     border-left: 1px solid #EEEEEE;
     border-right: 1px solid #EEEEEE;
@@ -383,24 +383,23 @@ img {
     color: var(--second-color);
 }
 
-.address-footer {
+.address__footer {
     line-height: 1.7;
     color: var(--whitw-color-texte);
     padding-bottom: 9px;
 }
 
-.contact-link-light {
+.contact__link--light {
     text-decoration: none;
     font-weight: 500;
     color: rgb(255, 255, 255, 0.6);
 }
 
-.contat-item-footer:not(:last-child) {
+.contat__item--footer:not(:last-child) {
     margin-bottom: 6px;
 }
 
-.container,
-.container-footer {
+.container {
     width: 1200px;
     margin-right: auto;
     margin-left: auto;
@@ -408,7 +407,7 @@ img {
     padding-right: 15px;
 }
 
-.container-footer-contacts {
+.container__footer--contacts {
     flex-grow: 1;
 }
 
@@ -417,21 +416,21 @@ img {
     padding-bottom: 94px;
 }
 
-.container-flex {
+.container__flex {
     display: flex;
 }
 
-.filter-flex {
+.filter__flex {
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
 }
 
-.porfolio-bg {
+.porfolio__bg {
     background: #E5E5E5;
 }
 
-.work-pd {
+.work__pd {
     padding-top: 0px;
 }
 
@@ -442,7 +441,7 @@ img {
     justify-content: center;
 }
 
-.contact-svg-mail {
+.contact__svg--mail {
     width: 16px;
     height: 12px;
     fill: #757575;
@@ -452,12 +451,12 @@ img {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-svg-mail:focus,
-.contact-svg-mail:hover {
+.contact__svg--mail:focus,
+.contact__svg--mail:hover {
     fill: var(--accent-color);
 }
 
-.contact-svg-phone {
+.contact__svg--phone {
     width: 10px;
     height: 16px;
     fill: #757575;
@@ -467,47 +466,47 @@ img {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-link:hover .contact-svg-phone,
-.contact-link:focus .contact-svg-phone {
+.contact__link:hover .contact__svg--phone,
+.contact__link:focus .contact__svg--phone {
     fill: var(--accent-color);
 }
 
-.contact-svg-phone:focus,
-.contact-svg-phone:hover {
+.contact__svg--phone:focus,
+.contact__svg--phone:hover {
     fill: var(--accent-color);
 }
 
-.features-svg {
+.features__svg {
     width: 70px;
     height: 70px;
 }
 
-.container-svg {
+.container__svg {
     background-color: #F5F4FA;
     border-radius: 4px;
     padding: 25px 100px;
     margin-bottom: 30px;
 }
 
-.social-member {
+.social__member {
     width: 20px;
     height: 20px;
     fill: #AFB1B8;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-member-list {
+.social__member--list {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.social-member-item {
+.social__member--item {
     width: 44px;
     height: 44px;
 }
 
-.social-member-link {
+.social__member--link {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -517,31 +516,31 @@ img {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-member-item:not(:last-child) {
+.social__member--item:not(:last-child) {
     margin-right: 10px;
 }
 
-.social-member-link:hover,
-.social-member-link:focus {
+.social__member--link:hover,
+.social__member--link:focus {
     background-color: var(--accent-color);
 }
 
-.social-member-link:hover .social-member,
-.social-member-link:focus .social-member {
+.social__member--link:hover .social_member,
+.social__member--link:focus .social_member {
     fill: #F5F4FA;
 }
 
-.clients-item:not(:last-child) {
+.clients__item:not(:last-child) {
     margin-right: 30px;
 }
 
-.clients-list {
+.clients__list {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.clients-svg {
+.clients__svg {
     fill: #AFB1B8;
     width: 106px;
     height: 60px;
@@ -549,25 +548,25 @@ img {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client-link {
+.client__link {
     border: 1px solid #AFB1B8;
     box-sizing: border-box;
     border-radius: 4px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client-link:hover,
-.client-link:focus {
+.client__link:hover,
+.client__link:focus {
     border-color: var(--accent-color);
 }
 
-.client-link:hover .clients-svg,
-.client-link:focus .clients-svg {
+.client__link:hover .clients__svg,
+.client__link:focus .clients__svg {
     fill: var(--accent-color);
     border-color: var(--accent-color);
 }
 
-.footer-title {
+.footer__title {
     font-size: 14px;
     font-weight: 700;
     color: #FFFFFF;
@@ -576,25 +575,25 @@ img {
     margin-bottom: 20px;
 }
 
-.social-footer {
+.social__footer {
     width: 20px;
     height: 20px;
     fill: #FFFFFF;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-footer-list {
+.social__footer--list {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.social-footer-item {
+.social__footer--item {
     width: 44px;
     height: 44px;
 }
 
-.social-footer-link {
+.social__footer--link {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -606,32 +605,32 @@ img {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-footer-item:not(:last-child) {
+.social__footer--item:not(:last-child) {
     margin-right: 10px;
 }
 
-.social-footer-link:hover,
-.social-footer-link:focus {
+.social__footer--link:hover,
+.social__footer--link:focus {
     background-color: var(--accent-color);
 }
 
-.social-footer-link:hover .social-footer,
-.social-footer-link:focus .social-footer {
+.social__footer--link:hover .social__footer,
+.social__footer--link:focus .social__footer {
     fill: #F5F4FA;
 }
 
-.container-footer-svg {
+.container__footer--svg {
     margin-left: 70px;
 }
 
-.container-footer-subscribe {
+.container__footer--subscribe {
     display: inline-block;
     align-items: baseline;
     justify-content: center;
     margin-left: 93px;
 }
 
-.container-footer {
+.container__footer {
     display: flex;
     align-items: baseline;
 }
@@ -648,7 +647,7 @@ img {
     left: 0;
 }
 
-.subtitel-specifications {
+.subtitel__specifications {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.2;
@@ -657,7 +656,7 @@ img {
     text-transform: uppercase;
 }
 
-.work-specifications {
+.work__specifications {
     display: flex;
 }
 
@@ -673,29 +672,29 @@ img {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.box-gallery {
+.box__gallery {
     position: relative;
     overflow: hidden;
 }
 
-.portfolio-overlay:focus .overlay,
-.portfolio-overlay:hover .overlay {
+.portfolio__overlay:focus .overlay,
+.portfolio__overlay:hover .overlay {
     transform: translateY(0);
 }
 
-.overlay-text {
+.overlay__text {
     font-size: 18px;
     line-height: 1.55;
     letter-spacing: 0.03em;
     color: #FFFFFF;
 }
 
-.backdrop.is-hidden {
+.backdrop.is__hidden {
     opacity: 0;
     pointer-events: none;
 }
 
-.backdrop.is-hidden .modal {
+.backdrop.is__hidden .modal {
     transform: translate(-50%, -50%) scale(0.9);
 }
 
@@ -724,7 +723,7 @@ img {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-modal {
+.button__modal {
     position: absolute;
     top: 8px;
     right: 8px;
@@ -739,7 +738,7 @@ img {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-btn {
+.modal__close--btn {
     position: absolute;
     top: 7px;
     right: 7px;
@@ -749,17 +748,17 @@ img {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-modal:focus,
-.btn-modal:hover {
+.btn__modal:focus,
+.btn__modal:hover {
     background-color: var(--accent-color);
 }
 
-.btn-modal:focus .modal-close-btn,
-.btn-modal:hover .modal-close-btn {
+.btn__modal:focus .modal__close--btn,
+.btn__modal:hover .modal__close--btn {
     fill: #F5F4FA;
 }
 
-.modal-titel {
+.modal__titel {
     position: relative;
     font-weight: 700;
     font-size: 20px;
@@ -770,11 +769,11 @@ img {
     margin-bottom: 12px;
 }
 
-.footer-form {
+.footer__form {
     position: relative;
 }
 
-.footer-input {
+.footer__input {
     width: 358px;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -784,13 +783,13 @@ img {
     background-color: #2F303A;
 }
 
-.mail-label {
+.mail__label {
     position: relative;
     color: #FFFFFF;
     outline: none;
 }
 
-.btn-subscribe {
+.btn__subscribe {
     margin-left: 12px;
     width: 200px;
     height: 50px;
@@ -807,7 +806,7 @@ img {
     align-items: baseline;
 }
 
-.button-icon {
+.button__icon {
     position: absolute;
     bottom: 13px;
     top: 13px;
@@ -815,29 +814,29 @@ img {
     fill: #FFFFFf;
 }
 
-.modal-fild {
+.modal__fild {
     display: flex;
     flex-direction: column;
     position: relative;
 }
 
-.modal-fild input {
+.modal__fild input {
     padding-left: 40px;
     outline: none;
 }
 
-.modal-fild {
+.modal__fild {
     margin-bottom: 10px;
 }
 
-.coment-fild {
+.coment__fild {
     display: flex;
     flex-direction: column;
     position: relative;
     margin-bottom: 20px;
 }
 
-.icon-fild {
+.icon__fild {
     position: absolute;
     top: 50%;
     bottom: 50%;
@@ -845,7 +844,7 @@ img {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input {
+.form__input {
     height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     box-sizing: border-box;
@@ -854,45 +853,45 @@ img {
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:focus {
+.form__input:focus {
     border-color: var(--accent-color);
 }
 
-.coment-input {
+.coment__input {
     padding: 12px 16px;
     resize: none;
     outline: none;
     cursor: pointer;
 }
 
-.coment-input:focus {
+.coment__input:focus {
     border-color: var(--accent-color);
 }
 
-.fild-item {
+.fild__item {
     margin-bottom: 4px;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
 }
 
-.form-input:focus-within .icon-fild {
+.form__input:focus-within .icon__fild {
     fill: var(--accent-color);
 }
 
-.modal-fild input:hover+.icon-fild,
-.modal-fild input:focus+.icon-fild {
+.modal__fild input:hover+.icon__fild,
+.modal__fild input:focus+.icon__fild {
     fill: var(--accent-color);
 }
 
-.coment-input {
+.coment__input {
     height: 120px;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
 }
 
-.checkbox-icon-border {
+.checkbox__icon--border {
     width: 16px;
     height: 15px;
     border: 2px solid black;
@@ -904,26 +903,26 @@ img {
     justify-content: center;
 }
 
-.checkbox-icon {
+.checkbox__icon {
     left: 1px;
     top: 3px;
     fill: #FFFFFF;
 }
 
-.checkbox-text {
+.checkbox__text {
     display: inline-block;
     line-height: 1.71;
     letter-spacing: 0.03em;
 }
 
-.check-label {
+.check__label {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 30px;
 }
 
-.check-in {
+.check__in {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -934,13 +933,13 @@ img {
     overflow: hidden;
 }
 
-.check-in:checked+.checkbox-icon-border {
+.check__in:checked+.checkbox__icon--border {
     border: transparent;
     background-color: var(--accent-color);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-submit {
+.button__submit {
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -958,7 +957,7 @@ img {
     margin-right: 25%;
 }
 
-.modal-policy-link {
+.modal__policy--link {
     display: inline-block;
     line-height: 1.71;
     letter-spacing: 0.03em;
