--- a/css/main.css
+++ b/css/main.css
@@ -1434,6 +1434,8 @@ img {
 }
 
 .portfolio__item {
+  width: -webkit-calc((100% - 60px) / 3);
+  width: calc((100% - 60px) / 3);
   margin: 15px;
 }
 
