--- a/sass/components/_basestyles.scss
+++ b/sass/components/_basestyles.scss
@@ -45,15 +45,15 @@ img {
     padding-bottom: 94px;
 }
 
-.work__pd {
+.section__nopaddingtop {
     padding-top: 0px;
 }
 
-.team__bg {
+.section__background {
     background-color: #F5F4FA;
 }
 
-.subtitel {
+.section__titel {
     font-size: 36px;
     font-weight: 700;
     line-height: 1.18;
