--- a/sass/components/_clientslinks.scss
+++ b/sass/components/_clientslinks.scss
@@ -1,22 +1,26 @@
-.clients__item:not(:last-child) {
-    margin-right: 30px;
-}
-
-.clients__list {
+.clients {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.clients__svg {
+.clients__item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.clients__icon {
     fill: #AFB1B8;
     width: 106px;
     height: 60px;
     margin: 16px 32px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .clients__link:hover &,
+    .clients__link:focus & {
+        fill: $accent-color;
+    }
 }
 
-.client__link {
+.clients__link {
     border: 1px solid #AFB1B8;
     box-sizing: border-box;
     border-radius: 4px;
@@ -25,10 +29,4 @@
     &:focus {
         border-color: $accent-color;
     }
-}
-
-.client__link:hover .clients__svg,
-.client__link:focus .clients__svg {
-    fill: $accent-color;
-    border-color: $accent-color;
 }
