--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -5,39 +5,50 @@
         justify-content: center;
     }
     
-    .nav__logo--footer {
+    .footer__container {
+        display: flex;
+        align-items: baseline;
+    }
+    
+    .footer__box {
+        flex-grow: 1;
+    }
+    
+    .footer__logo {
         @extend %logo;
         text-transform: capitalize;
         color: $background-main-color;
     }
     
-    .footer__list {
-        margin-top: 20px;
-    }
-    
-    .contact__link--footer {
-        font-weight: 500;
-        color: rgba(255, 255, 255, 0.6);
-        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    
-    .contact__link--footer:focus,
-    .contact__link--footer:hover {
+    .footer__logo--colored {
         color: $accent-color;
     }
     
-    .address__footer {
+    .footer__list {
+        margin-top: 20px;
+        &:not(:last-child) {
+            margin-right: 50px;
+        }
+    }
+    
+    .footer__link {
+        font-weight: 500;
+        color: rgba(255, 255, 255, 0.6);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:focus,
+        &:hover {
+            color: $accent-color;
+        }
+    }
+    
+    .footer__addres {
         line-height: 1.7;
         color: $background-main-color;
         padding-bottom: 9px;
     }
     
-    .contat__item--footer:not(:last-child) {
+    .footer__contacts:not(:last-child) {
         margin-bottom: 6px;
-    }
-    
-    .container__footer--contacts {
-        flex-grow: 1;
     }
     
     .footer__title {
@@ -49,25 +60,32 @@
         margin-bottom: 20px;
     }
     
-    .social__footer {
+    .footer__socials--icon {
         width: 20px;
         height: 20px;
         fill: #FFFFFF;
         transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        .footer__socials--link:hover &,
+        .footer__socials--link:focus & {
+            fill: #F5F4FA;
+        }
     }
     
-    .social__footer--list {
+    .footer__socials {
         display: flex;
         justify-content: center;
         align-items: center;
     }
     
-    .social__footer--item {
+    .footer__socials--item {
         width: 44px;
         height: 44px;
+        &:not(:last-child) {
+            margin-right: 10px;
+        }
     }
     
-    .social__footer--link {
+    .footer__socials--link {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -77,40 +95,56 @@
         background: rgba(255, 255, 255, 0.1);
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus {
+            background-color: $accent-color;
+        }
     }
     
-    .social__footer--item:not(:last-child) {
-        margin-right: 10px;
-    }
-    
-    .social__footer--link:hover,
-    .social__footer--link:focus {
-        background-color: $accent-color;
-    }
-    
-    .social__footer--link:hover .social__footer,
-    .social__footer--link:focus .social__footer {
-        fill: #F5F4FA;
-    }
-    
-    .container__footer--svg {
+    .footer__box--icons {
         margin-left: 70px;
     }
     
-    .container__footer--subscribe {
+    .footer__box--subscribe {
         display: inline-block;
         align-items: baseline;
         justify-content: center;
         margin-left: 93px;
     }
     
-    .container__footer {
-        display: flex;
+    .footer__form {
+        position: relative;
+    }
+    
+    .footer__label {
+        position: relative;
+        color: #FFFFFF;
+        outline: none;
+    }
+    
+    .footer__subscribe--button {
+        margin-left: 12px;
+        width: 200px;
+        height: 50px;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.87;
+        letter-spacing: 0.06em;
+        color: #FFFFFF;
+        background-color: $accent-color;
+        border-radius: 4px;
+        border: transparent;
+        cursor: pointer;
+        display: inline-block;
         align-items: baseline;
     }
     
-    .footer__form {
-        position: relative;
+    .footer__subscribe--icon {
+        position: absolute;
+        bottom: 13px;
+        top: 13px;
+        margin-left: 10px;
+        fill: #FFFFFf;
     }
     
     .footer__input {
