--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,4 +1,4 @@
-.hero__section {
+.hero {
     padding: 200px 0;
     background-color: #2F303A;
     background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../image/bgimg.jpg);
@@ -6,7 +6,7 @@
     background-position: center;
 }
 
-.titel__text {
+.hero__titel {
     font-size: 44px;
     letter-spacing: 0.06em;
     font-weight: 900;
@@ -40,20 +40,7 @@
     border-radius: 4px;
 }
 
-.hero__button {
-    background-color: $accent-color;
-}
-
-.backdrop.is__hidden {
-    opacity: 0;
-    pointer-events: none;
-}
-
-.backdrop.is__hidden .modal {
-    transform: translate(-50%, -50%) scale(0.9);
-}
-
-.backdrop {
+.window {
     position: fixed;
     top: 0;
     left: 0;
@@ -65,7 +52,16 @@
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal {
+.window.window__is--hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.window.window__is--hidden .modal {
+    transform: translate(-50%, -50%) scale(0.9);
+}
+
+.window__modal {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -78,7 +74,7 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button__modal {
+.window__modal--button {
     position: absolute;
     top: 8px;
     right: 8px;
@@ -91,9 +87,13 @@
     border-radius: 50%;
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:focus,
+    &:hover {
+        background-color: $accent-color;
+    }
 }
 
-.modal__close--btn {
+.window__close--icon {
     position: absolute;
     top: 7px;
     right: 7px;
@@ -101,19 +101,13 @@
     height: 16px;
     fill: #212121;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .btn__modal:focus &,
+    .btn__modal:hover & {
+        fill: #F5F4FA;
+    }
 }
 
-.btn__modal:focus,
-.btn__modal:hover {
-    background-color: $accent-color;
-}
-
-.btn__modal:focus .modal__close--btn,
-.btn__modal:hover .modal__close--btn {
-    fill: #F5F4FA;
-}
-
-.modal__titel {
+.window__titel {
     position: relative;
     font-weight: 700;
     font-size: 20px;
@@ -124,50 +118,25 @@
     margin-bottom: 12px;
 }
 
-.mail__label {
-    position: relative;
-    color: #FFFFFF;
-    outline: none;
-}
-
-.btn__subscribe {
-    margin-left: 12px;
-    width: 200px;
-    height: 50px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-    color: #FFFFFF;
-    background-color: $accent-color;
-    border-radius: 4px;
-    border: transparent;
-    cursor: pointer;
-    display: inline-block;
-    align-items: baseline;
-}
-
-.button__icon {
-    position: absolute;
-    bottom: 13px;
-    top: 13px;
-    margin-left: 10px;
-    fill: #FFFFFf;
-}
-
-.modal__fild {
+.window__fild {
     display: flex;
     flex-direction: column;
     position: relative;
+    margin-bottom: 10px;
 }
 
-.modal__fild input {
+.window__input {
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
     padding-left: 40px;
     outline: none;
-}
-
-.modal__fild {
-    margin-bottom: 10px;
+    box-sizing: border-box;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:focus {
+        border-color: $accent-color;
+    }
 }
 
 .coment__fild {
@@ -177,62 +146,43 @@
     margin-bottom: 20px;
 }
 
-.icon__fild {
+.window__icons {
     position: absolute;
     top: 50%;
     bottom: 50%;
     left: 12px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .window__input:focus-within & {
+        fill: $accent-color;
+    }
+    .window__fild:hover &,
+    .window__fild:focus & {
+        fill: $accent-color;
+    }
 }
 
-.form__input {
-    height: 40px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    box-sizing: border-box;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form__input:focus {
-    border-color: $accent-color;
-}
-
-.coment__input {
+.window__coment {
     padding: 12px 16px;
     resize: none;
     outline: none;
     cursor: pointer;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    &:focus {
+        border-color: $accent-color;
+    }
 }
 
-.coment__input:focus {
-    border-color: $accent-color;
-}
-
-.fild__item {
+.window__fild--item {
     margin-bottom: 4px;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
 }
 
-.form__input:focus-within .icon__fild {
-    fill: $accent-color;
-}
-
-.modal__fild input:hover+.icon__fild,
-.modal__fild input:focus+.icon__fild {
-    fill: $accent-color;
-}
-
-.coment__input {
-    height: 120px;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.01em;
-}
-
-.checkbox__icon--border {
+.window__checkbox--border {
     width: 16px;
     height: 15px;
     border: 2px solid black;
@@ -244,26 +194,26 @@
     justify-content: center;
 }
 
-.checkbox__icon {
+.window__checkbox--icon {
     left: 1px;
     top: 3px;
     fill: #FFFFFF;
 }
 
-.checkbox__text {
+.window__text {
     display: inline-block;
     line-height: 1.71;
     letter-spacing: 0.03em;
 }
 
-.check__label {
+.window__checkbox {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 30px;
 }
 
-.check__in {
+.window__checkbox--input {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -274,13 +224,13 @@
     overflow: hidden;
 }
 
-.check__in:checked+.checkbox__icon--border {
+.window__checkbox--input:checked+.window__checkbox--border {
     border: transparent;
     background-color: $accent-color;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button__submit {
+.window__submit {
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -298,7 +248,7 @@
     margin-right: 25%;
 }
 
-.modal__policy--link {
+.window__link {
     display: inline-block;
     line-height: 1.71;
     letter-spacing: 0.03em;
