--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,3 +1,9 @@
+.portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+}
+
 .porfolio__title {
     position: absolute;
     clip: rect(0 0 0 0);
@@ -6,36 +12,20 @@
     margin: -1px;
 }
 
-.portfolio__list {
-    display: flex;
-    flex-wrap: wrap;
-    margin: -15px;
-}
-
-.portfolio__link:focus,
-.portfolio__link:hover {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.gallery__img:focus .portfolio__link,
-.gallery__img:hover .portfolio__link {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.gallery__img {
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .portfolio__item {
     margin: 15px;
 }
 
-.porfolio__link {
+.portfolio__link {
     display: block;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:focus,
+    &:hover {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 }
 
-.subtitle__portfolio {
+.portfolio__title {
     font-size: 18px;
     font-weight: 700;
     line-height: 2;
@@ -51,18 +41,14 @@
     line-height: 1.9;
 }
 
-.portfolio__text--box {
+.portfolio__borders {
     border-bottom: 1px solid #EEEEEE;
     border-left: 1px solid #EEEEEE;
     border-right: 1px solid #EEEEEE;
     padding: 25px;
 }
 
-.porfolio__bg {
-    background: #E5E5E5;
-}
-
-.overlay {
+.portfolio__overlay {
     padding: 63px 24px;
     position: absolute;
     top: 0;
@@ -72,21 +58,20 @@
     transform: translateY(100%);
     background-color: rgba(33, 150, 243, 0.9);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .portfolio__link:focus &,
+    .portfolio__link:hover & {
+        transform: translateY(0);
+    }
 }
 
-.box__gallery {
-    position: relative;
-    overflow: hidden;
-}
-
-.portfolio__overlay:focus .overlay,
-.portfolio__overlay:hover .overlay {
-    transform: translateY(0);
-}
-
-.overlay__text {
+.portfolio__overlay--text {
     font-size: 18px;
     line-height: 1.55;
     letter-spacing: 0.03em;
     color: #FFFFFF;
+}
+
+.portfolio__box {
+    position: relative;
+    overflow: hidden;
 }
