--- a/sass/components/_content.scss
+++ b/sass/components/_content.scss
@@ -9,7 +9,7 @@
 .features__title {
     font-size: 14px;
     font-weight: 700;
-    color: $accent-color;
+    color: $second-color;
     text-transform: uppercase;
     margin-bottom: 10px;
 }
