--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -57,7 +57,7 @@
     pointer-events: none;
 }
 
-.window.window__is--hidden .modal {
+.window.window__is--hidden .window__modal {
     transform: translate(-50%, -50%) scale(0.9);
 }
 
