--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -68,7 +68,7 @@
     align-items: center;
 }
 
-.contacts__list:not(:last-child) {
+.contacts__item:not(:last-child) {
     margin-right: 50px;
 }
 
