--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -64,7 +64,7 @@
     }
 }
 
-.portfolio__overlay--text {
+.portfolio__overlay-text {
     font-size: 18px;
     line-height: 1.55;
     letter-spacing: 0.03em;
