--- a/sass/components/_group.scss
+++ b/sass/components/_group.scss
@@ -27,13 +27,13 @@
     margin-bottom: 16px;
 }
 
-.team__socials {
+.socials {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.team__socials--icon {
+.socials__icon {
     width: 20px;
     height: 20px;
     fill: #AFB1B8;
@@ -44,7 +44,7 @@
     }
 }
 
-.team__socials--item {
+.socials__item {
     width: 44px;
     height: 44px;
     &:not(:last-child) {
@@ -60,7 +60,7 @@
     }
 }
 
-.border__name {
+.team__box {
     text-align: center;
     padding: 30px 0;
     background-color: #FFFFFF;
