--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -6,7 +6,7 @@
     background-position: center;
 }
 
-.hero__titel {
+.hero__title {
     font-size: 44px;
     letter-spacing: 0.06em;
     font-weight: 900;
@@ -52,12 +52,12 @@
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.window.window__is--hidden {
+.window.is-hidden {
     opacity: 0;
     pointer-events: none;
 }
 
-.window.window__is--hidden .window__modal {
+.window.is-hidden .window__modal {
     transform: translate(-50%, -50%) scale(0.9);
 }
 
@@ -74,7 +74,11 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.window__modal--button {
+.window__form {
+    margin: 40px;
+}
+
+.window__modal-button {
     position: absolute;
     top: 8px;
     right: 8px;
@@ -93,7 +97,7 @@
     }
 }
 
-.window__close--icon {
+.window__close-icon {
     position: absolute;
     top: 7px;
     right: 7px;
@@ -107,7 +111,7 @@
     }
 }
 
-.window__titel {
+.window__title {
     position: relative;
     font-weight: 700;
     font-size: 20px;
@@ -115,6 +119,7 @@
     text-align: center;
     letter-spacing: 0.03em;
     color: $second-color;
+    margin-top: 40px;
     margin-bottom: 12px;
 }
 
@@ -175,14 +180,14 @@
     }
 }
 
-.window__fild--item {
+.window__fild-item {
     margin-bottom: 4px;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
 }
 
-.window__checkbox--border {
+.window__checkbox-border {
     width: 16px;
     height: 15px;
     border: 2px solid black;
@@ -194,7 +199,7 @@
     justify-content: center;
 }
 
-.window__checkbox--icon {
+.window__checkbox-icon {
     left: 1px;
     top: 3px;
     fill: #FFFFFF;
@@ -213,7 +218,7 @@
     margin-bottom: 30px;
 }
 
-.window__checkbox--input {
+.window__checkbox-input {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -222,12 +227,11 @@
     padding: 0;
     clip: rect(0 0 0 0);
     overflow: hidden;
-}
-
-.window__checkbox--input:checked+.window__checkbox--border {
-    border: transparent;
-    background-color: $accent-color;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:checked+.window__checkbox-border {
+        border: transparent;
+        background-color: $accent-color;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
 .window__submit {
